# quipu

./: .gitignore  .pre-commit-config.yaml  .vale.ini  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  justfile  release-plz.toml
.bobbin/: metrics.jsonl
.claude/commands/: done.md  review.md
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml  release.yml
.runtime/: session_id
data/: quipu.db  quipu.db-shm
docs/book/: book.toml
docs/book/custom/css/: custom.css
docs/book/custom/js/: mermaid-init.js
docs/book/src/: README.md  SUMMARY.md
docs/book/src/architecture/: ci-cd.md  context-pipeline.md  eavt.md  episodes.md  federation.md  graph-projection.md  lancedb.md  rdf.md  shacl.md  sparql.md  vector-search.md
docs/book/src/concepts/: owl.md  reasoning.md  schema-evolution.md  shacl-validation.md  temporal-model.md  triples.md
docs/book/src/getting-started/: configuration.md  installation.md  quick-start.md
docs/book/src/recipes/: impact-analysis.md  incident-correlation.md  knowledge-ingestion.md
docs/book/src/reference/: api.md  cli.md  contributing.md  mcp-tools.md  reasoner.md  rest-api.md
docs/book/src/tutorials/: agent-builder.md  code-archaeologist.md  homelab-operator.md  knowledge-gardener.md  rule-builder.md  sparql.md
docs/design/: entity-resolution.md  episode-retraction.md  group-isolation.md  pagerank.md  quipu-ui.md  reasoner.md  test-fixtures.md  vision.md
quipu-ui/: Cargo.toml  Trunk.toml  index.html  style.css
quipu-ui/src/: api.rs  interop.rs  main.rs  web_components.rs
quipu-ui/src/components/: entity_sidebar.rs  episode_timeline.rs  graph_explorer.rs  mod.rs  schema_browser.rs  sparql_workbench.rs  temporal_navigator.rs
scripts/: check-file-size.sh  precommit-mdbook.sh
shapes/: aegis-ontology.shapes.ttl  aegis-rules.ttl  code-entities.ttl
src/: cli.rs  cli_commands.rs  cli_propose.rs  code_entity_tests.rs  config.rs  context.rs  context_tests.rs  embedding.rs  episode.rs  error.rs  graph.rs  http_auth.rs  impact.rs  lib.rs  main.rs  mcp.rs  migration.rs  namespace.rs  observability.rs  onnx_embedder.rs  owl.rs  owl_parse.rs  owl_tests.rs  proposal.rs  proposal_tests.rs  provider.rs  rdf.rs  report.rs  resolution.rs  schema.rs  server.rs  shacl.rs  sparql.rs  store.rs  time.rs  types.rs  vector.rs  vector_delegate.rs  vector_lance.rs  vector_lance_tests.rs
src/context/: mod.rs  tests.rs  tools.rs
src/episode/: mod.rs  tests.rs
src/mcp/: graphiti.rs  impact.rs  mod.rs  named_query.rs  owl.rs  proposal.rs  resolution.rs  search.rs  tests.rs  tools.rs
src/reasoner/: ast.rs  compile.rs  evaluate.rs  evaluate_tests.rs  mod.rs  parse.rs  parse_tests.rs  reactive.rs  reactive_tests.rs  stratify.rs  stratify_tests.rs
src/reconcile/: mod.rs  tests.rs
src/semweb/: conneg.rs  mod.rs
src/sparql/: aggregate.rs  filter.rs  mod.rs  pattern.rs  pattern_util.rs  property_path.rs  rdfs.rs  tests.rs
src/src_rust/: main.rs
src/store/: mod.rs  ops.rs  tests.rs
test-fixtures/: seed-agents.ttl  seed-infra.ttl  seed-knowledge.ttl  test-embed.html  test-episodes.json  test-shapes.ttl
ui/: index.html  quipu-components.js
