[package]
name = "quipu"
version = "0.1.0"
edition = "2024"
description = "AI-native knowledge graph with strict ontology enforcement — Bobbin's knowledge module"
authors = ["Steve Brown"]
license = "MIT"
repository = "https://github.com/scbrown/quipu"
keywords = ["knowledge-graph", "rdf", "sparql", "ontology", "ai"]
categories = ["database", "data-structures"]

[[bin]]
name = "quipu"
path = "src/main.rs"
required-features = ["shacl"]

[[bin]]
name = "quipu-server"
path = "src/server.rs"
required-features = ["shacl"]

[dependencies]
rusqlite = { version = "0.33", features = ["bundled"] }
thiserror = "2"
oxrdf = "0.3"
oxttl = "0.2"
oxrdfio = "0.2"
spargebra = "0.4"
rudof_lib = { version = "0.2.8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
petgraph = "0.7"
toml = "0.8"

[features]
default = ["shacl"]
shacl = ["dep:rudof_lib"]

[dev-dependencies]
tempfile = "3"
