[package]
name = "quipu"
version = "0.1.0"
edition = "2024"
description = "AI-native knowledge graph with strict ontology enforcement — Bobbin's knowledge module"
authors = ["Steve Brown"]
license = "MIT"
repository = "https://github.com/scbrown/quipu"
keywords = ["knowledge-graph", "rdf", "sparql", "ontology", "ai"]
categories = ["database", "data-structures"]
homepage = "https://github.com/scbrown/quipu"
documentation = "https://docs.rs/quipu"
exclude = [
    ".github/",
    ".githooks/",
    ".vale/",
    ".vale.ini",
    ".pre-commit-config.yaml",
    ".markdownlint-cli2.yaml",
    ".prettierrc.yaml",
    "docs/",
    "assets/",
    "cliff.toml",
    "justfile",
    "CONTRIBUTING.md",
    "AGENTS.md",
    "CLAUDE.md",
    "GEMINI.md",
    "CHANGELOG.md",
    "release-plz.toml",
    "scripts/",
]

[[bin]]
name = "quipu"
path = "src/main.rs"
required-features = ["shacl"]

[[bin]]
name = "quipu-server"
path = "src/server.rs"
required-features = ["shacl"]

[dependencies]
rusqlite = { version = "0.33", features = ["bundled"] }
thiserror = "2"
oxrdf = "0.3"
oxttl = "0.2"
oxrdfio = "0.2"
spargebra = "0.4"
rudof_lib = { version = "0.2.8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
petgraph = "0.7"
toml = "0.8"
lancedb = { version = "0.27", optional = true }
arrow-array = { version = "57", optional = true }
arrow-schema = { version = "57", optional = true }
futures = { version = "0.3", optional = true }

[features]
default = ["shacl"]
shacl = ["dep:rudof_lib"]
lancedb = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema", "dep:futures"]

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
missing_docs = "warn"

[lints.clippy]
# Correctness & safety
cast_sign_loss = "warn"
checked_conversions = "warn"

# Code quality
cloned_instead_of_copied = "warn"
doc_markdown = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
fn_params_excessive_bools = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
match_wildcard_for_single_variants = "warn"
needless_continue = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
string_add_assign = "warn"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"

[dev-dependencies]
tempfile = "3"
