[package]
name = "quipu-ui"
version = "0.1.0"
edition = "2024"
description = "Quipu knowledge graph explorer — Leptos WASM frontend with Sigma.js graph visualization"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
leptos_meta = "0.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Node",
    "NodeList",
    "Event",
    "MouseEvent",
    "KeyboardEvent",
    "CustomEvent",
    "CustomEventInit",
    "EventTarget",
    "Storage",
    "Location",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
gloo-net = { version = "0.6", features = ["json"] }
gloo-timers = { version = "0.3", features = ["futures"] }
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
